TASK-316: RECON-11 - G1 31.0% декомпозирована (card-set 16.39% = old->young store-firehose 4-6M/s + oop-scan 10.70%); свип 5 кандидатов #13 закрыт (2 INFEASIBLE-BY-PARITY, 3 PAPER-REFUTED); #13 SKIP-STORE-DIET -> инструмент-гейт; GOAL СТАТУС + worklog